# mat-mul-opencl

./: CMakeLists.txt  README.md  matmul.cl  matmul.cpp
examples/: closure.in  closure.out  multiply.in  multiply.out
include/: matmul.h  test.h
src/: main.cpp  test.cpp
